--- a/App/Frontend/userNotes/css/StudyTools.css
+++ b/App/Frontend/userNotes/css/StudyTools.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(182, 182, 182);
 }
 
 .controls{
@@ -39,6 +39,7 @@ body{
    width: 90%;
    height: 95%;
    background-color: rgb(255, 255, 255);
+   border-right: 0.1px solid rgb(136, 136, 136);
    display: flex;
    flex-direction: column;
    gap:0.7vh;
@@ -47,13 +48,32 @@ body{
 }
 
 .tool{
-    width:95%;   /*95%*/
+    width:90%;   /*95%*/
     height:11.5%;
-    background-color: rgb(91, 90, 90);
-    font-family: "Inter", sans-serif;
+    background-color: rgb(255, 255, 255);
+    /* font-family: "Inter", sans-serif; */
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
     font-size: 22px;
     margin-left: 1%;
     margin-top: 1%;
+    display: flex;
+    flex-direction: row;
+    margin-left: 4%;
    
+}
+
+.ToolName{
+    width: 70%;
+    height: 100%;
+    
+    /* background-color:blueviolet; */
+
+}
+
+.ToolQuickAction{
+    width: 30%;
+    height: 100%;
+    /* background-color: brown; */
 }
 
