--- a/App/Frontend/userNotes/css/StudyTools.css
+++ b/App/Frontend/userNotes/css/StudyTools.css
@@ -10,6 +10,10 @@ body{
 .controls{
     position: relative;
     width:100%;
+    height:25vh;
+    background-color: rgb(220, 220, 220);
+    border-radius: 15px;
+    border: 2px solid black;
     /*margin-left: -8px;*/
 }
 
@@ -20,11 +24,12 @@ body{
     display: flex;
     flex-direction: row;
     gap: 0.5vh;
-    justify-content:flex-start;
+    justify-content:center;
     align-items: center;
     overflow-x: auto;
     overflow-y: hidden;
     border-radius: 15px;
+    cursor: pointer;
 }
 
 #toggleStudyTools{
@@ -39,6 +44,11 @@ body{
     display: flex;
     align-items: center;
     gap: 0.1vh;
+    cursor: pointer;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+    border-top: none;
 }
 
 #StudyToolsDropdown{
@@ -53,7 +63,7 @@ body{
 
 .tools{
    position: relative;
-   width: 90%;
+   width: 32.5%;
    height: 95%;
    background-color: rgb(255, 255, 255);
    border-right: 0.1px solid rgb(136, 136, 136);
@@ -63,6 +73,7 @@ body{
    gap:0.7vh;
    overflow-y: auto;
    overflow-x: hidden;
+   /* margin-left: 1vh; */
 }
 
 .tool{
