--- a/App/Frontend/userNotes/css/NoteCarousal.css
+++ b/App/Frontend/userNotes/css/NoteCarousal.css
@@ -26,7 +26,7 @@ body {
 
 .menu {
     width: 100%;
-    height: 30vh;
+    height: 30.4vh;
     background-color: var(--light-gray);
     display: flex;
     flex-direction: column;
@@ -65,11 +65,92 @@ body {
 
 #toggleMenu {
     position: absolute;
-    width: 85px;
+    width: 20vh;
     height: 13%;
-    right: 50%;
+    right: 59%;
     background-color: var(--light-gray);
     z-index: 1;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 8px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#toggleTools{
+    position: absolute;
+    width: 20vh;
+    height: 13%;
+    right: 47%;
+    background-color: var(--light-gray);
+    z-index: 1;
+    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+
+#toggleAI{
+    position: absolute;
+    width: 20vh;
+    height: 13%;
+    right: 35%;
+    background-color: var(--light-gray);
+    z-index: 1;
+    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#toggleExtra{
+    position: absolute;
+    width: 20vh;
+    height: 13%;
+    right: 23%;
+    background-color: var(--light-gray);
+    z-index: 1;
+    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#NotePreviewDropdown,#ToolPreviewDropdown,#AIToolsDropdown,#ExtraToolsDropdown{
+    width:auto;
+    height:100%;
+    display: flex;
+    flex-direction: row;
+    justify-content:start;
+    align-items: center;
+    margin-top: -15px;
+    margin-left: 10px; 
+    margin-top: 0px;
+
+}
+
+#BookIcon,#PencilIcon,#AIIcon,#ExtraIcon{
+    width:auto;
+    height:100%;
+    display: flex;
+    flex-direction: row;
+    justify-content:start;
+    align-items: center;
+    margin-top: -15px;
+    margin-top: 0px;
+    margin-left: 4px; 
+   
+}
+
+.TabIcon{
+    width: 100%;
+    height: 100%;
 }
