--- a/App/Frontend/userNotes/css/NavBar.css
+++ b/App/Frontend/userNotes/css/NavBar.css
@@ -10,6 +10,7 @@
 body {
     background-color: var(--background-color);
     font-family: Arial, sans-serif;
+    cursor: pointer;
     margin: 0;
     padding: 0;
 }
@@ -28,10 +29,21 @@ body {
     width: 100%;
     height: 30.4vh;
     background-color: var(--light-gray);
+    
+    
+}
+
+#studyNoteSection{
+    width: 100%;
+    height: 30.4vh;
     display: flex;
     flex-direction: column;
     gap: 2.5vh;
-    /* border-radius: 15px; */
+}
+
+#studyToolSection{
+    width:100%;
+    height:30.4vh;
 }
 
 .upperControls{
