fixed javascript for studytools componenet

--- a/App/Frontend/userNotes/components/upperContainer.html
+++ b/App/Frontend/userNotes/components/upperContainer.html
@@ -26,6 +26,14 @@
             </div>
         </div>
 
+        <div class="add">
+            <div class="addButton">
+                <div class="addContainer">
+                     <img src="/App/Frontend/userNotes/components/svgs/AddNote.svg" id = "Add">
+                </div>
+            </div>
+        </div>
+
         <div class="organise">
             <div class="organiseButton">
                 <div class="sortContainer">
