added createNote  container

--- a/App/Frontend/userNotes/components/upperContainer.html
+++ b/App/Frontend/userNotes/components/upperContainer.html
@@ -7,42 +7,46 @@
     <link rel="stylesheet" href="/App/Frontend/userNotes/components/upperContainerStyle.css">
     <title>Document</title>
 </head>
+
 <body>
-    <div class="upperControls">
-        <div class="goBack">
-            <div class="returnButton">
-                <div class="returnButtonContainer">
-                        <img src="/App/Frontend/userNotes/components/svgs/ReturnArrow.svg" id="ReturnArrow" >
+    <div id="upperControls">
+
+        <div id="goBack">
+            <div id="returnButton">
+                <div id="returnButtonContainer">
+                    <img src="/App/Frontend/userNotes/components/svgs/ReturnArrow.svg" id="ReturnArrow">
                 </div>
             </div>
         </div>
 
-        <div class="searchBox">
-            <div class="search-container">
-                <div class="search-icon">
-                    <img src="/App/Frontend/userNotes/components/svgs/magnifying.svg" id="mg-glass" />
+        <div id="searchBox">
+            <div id="searchContainer">
+                <div id="searchIcon">
+                    <img src="/App/Frontend/userNotes/components/svgs/magnifying.svg" id="mgGlass" />
                 </div>
-                <input type="text" class="search-input" placeholder="Search notes..." />
+                <input type="text" id="searchInput" placeholder="Search notes..." />
             </div>
         </div>
 
-        <div class="add">
-            <div class="addButton">
-                <div class="addContainer">
-                     <img src="/App/Frontend/userNotes/components/svgs/AddNote.svg" id = "Add">
+        <div id="add">
+            <div id="addButton">
+                <div id="addContainer">
+                    <img src="/App/Frontend/userNotes/components/svgs/AddNote.svg" id="Add">
                 </div>
             </div>
         </div>
 
-        <div class="organise">
-            <div class="organiseButton">
-                <div class="sortContainer">
-                     <img src="/App/Frontend/userNotes/components/svgs/Sort.svg" id = "Sort">
+        <div id="pop"></div>
+
+        <div id="organise">
+            <div id="organiseButton">
+                <div id="sortContainer">
+                    <img src="/App/Frontend/userNotes/components/svgs/Sort.svg" id="Sort">
                 </div>
             </div>
         </div>
+
     </div>
-   
 </body>
 
 </html>
