--- a/App/Frontend/userNotes/css/NavBar.css
+++ b/App/Frontend/userNotes/css/NavBar.css
@@ -20,7 +20,7 @@ body {
 ****************************************************/
 
 .controls {
-    position: relative;
+    position: fixed;
     width: 100%;
     flex-direction: column;
 }
