--- a/App/Frontend/userNotes/components/upperContainerStyle.css
+++ b/App/Frontend/userNotes/components/upperContainerStyle.css
@@ -157,12 +157,13 @@
 
     display: flex;
     justify-content: center;
+
 }
 
 #addContainer {
-    width: 10vh;
+    width: auto;
     height: 100%;
-    border-radius: 5px;
+    border-radius: 51rem;
 
     display: flex;
     justify-content: center;
@@ -185,11 +186,34 @@
 
 /* Popup placeholder */
 #pop {
-    width:300px;
+    position: absolute;
+
+    width: 300px;
+    height: 200px;
+    border-radius: 10px;
+
+    display: none;
+    opacity: 0;
+    transform: translateY(10px); /* start slightly lower */
+    transition: opacity 0.25s ease, transform 0.25s ease;
+
+    z-index: 300;
+    margin-left: 120vh;
+}
+
+/* When visible */
+#pop.visible {
+    display: block;
+    opacity: 1;
+    transform: translateY(0);
+}
+
+
+
+
+/* width:300px;
     height:200px;
     z-index: 300;
     position: absolute;
     margin-left: 120vh;
-    display: none;
-   
-}
+    display: none; */
