implemented saveButton  hovering, changing border

--- a/App/Frontend/userNotes/components/NoteCard.html
+++ b/App/Frontend/userNotes/components/NoteCard.html
@@ -14,15 +14,21 @@
                         <h2 id="recntUpdate">1 day ago</h2>
                     </div>
                     <div class="Tags">
-                        <div class="tag"></div>
-                        <div class="tag"></div>
-                        <div class="tag"></div>
+                        <div class="tag">
+                            <h5 class="tagData">NoteTag1</h5>
+                        </div>
+                        <div class="tag">
+                            <h5>NoteTag2</h5>
+                        </div>
+                        <div class="tag">
+                            <h5>NoteTag3</h5>
+                        </div>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="Title">
-                        <h1>Note Title</h1>
+                        <h1>Note Titleeeeeeeeeeeeeee</h1>
                     </div>
                     <div class="Version">
                         <h2>( v.1.0 )</h2>
