--- a/App/Frontend/userNotes/components/addNote.css
+++ b/App/Frontend/userNotes/components/addNote.css
@@ -21,6 +21,13 @@ h4{
     box-shadow: 0px 8px 25px rgba(0,0,0,0.12);
     border: 1px solid #e5e5e5;
     font-family: 'Inter', Arial, sans-serif;
+    transition: 0.25s ease;
+}
+
+#createNoteContainer:has(#createButton:hover){
+    border: 4px solid rgb(67, 248, 188);;
+    border-color: rgb(67, 248, 188);
+    box-shadow: 0 0 18px rgba(67, 248, 188, 0.6);
 }
 
 
@@ -50,17 +57,27 @@ h4{
     width:90%;
     height:50%;
     margin-left: 8px;
+    
 }
 
 #titleInput{
     width:90%;
     height:50%;
     
-
     background-color: #fafafa;
     border: 1px solid #ccc;
     border-radius: 8px;
     margin-left: 7.5px;
+
+    box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+    transition: 0.25s ease;
+    border: 1px solid rgb(230, 230, 230);
+}
+
+#titleInput:hover,
+#titleInput:focus-within {
+    box-shadow: 0 4px 12px rgba(67, 248, 188, 0.5);
+    border-color: rgb(67, 248, 188);
 }
 
 /************** DESCRIPTION ***************/
@@ -86,6 +103,16 @@ h4{
     border-radius: 8px;
     resize: none;
     margin-left: 7.5px;
+
+    box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+    transition: 0.25s ease;
+    border: 1px solid rgb(230, 230, 230);
+}
+
+#DescriptionInput:hover,
+#DescriptionInput:focus-within {
+    box-shadow: 0 4px 12px rgba(67, 248, 188, 0.5);
+    border-color: rgb(67, 248, 188);
 }
 
 /*****************LOWER ROW***************/
@@ -126,13 +153,39 @@ h4{
     
 }
 
-#numInput{
-    width:26.2%;
+#numInput {
+    width: 26.2%;
     height: 2.4vh;
+
+    border: 1px solid rgb(230, 230, 230);
+    border-radius: 6px;
+    background-color: #fafafa;
+    text-align: center;
+
+    transition: 0.25s ease;
+}
+
+#numInput:hover,
+#numINput:focus {
+    box-shadow: 0 4px 12px rgba(67, 248, 188, 0.5);
+    border-color: rgb(67, 248, 188);
+    outline:none;
+}
+
+/* Chrome / Edge / Safari */
+#numInput::-webkit-outer-spin-button,
+#numInput::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+#numInput {
+    -moz-appearance: textfield;
 }
 
 .numBtn{
-    width:26.2%;
+    width:35.2%;
     height:3.2vh;
     border: none;
     border-radius: 4px;
@@ -180,11 +233,20 @@ h4{
 .tagInput{
     width: 92%;
     height: 75%;
-    /* border-radius: 12px; */
-    border: 1px solid #ccc;
     background-color: #fafafa;
+    border: 1px solid rgb(230, 230, 230); 
     border-radius: 8px;
+
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
+    transition: 0.25s ease;
 }
+.tagInput:hover,
+.tagInput:focus{
+    box-shadow: 0 4px 12px rgba(67, 248, 188, 0.5);
+    border-color: rgb(67, 248, 188);
+    outline:none;
+}
+
 
 /*************** Create button **************/
 #createNote{
@@ -209,6 +271,10 @@ h4{
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
     background-color: #f4f4f4;;
-   
+    transition: 0.25s ease;
+}
+
+#createButton:hover{
+  background-color:  rgb(67, 248, 188);
 }
 
