loaded most note data into the card

--- a/App/Frontend/userNotes/components/NoteCard.html
+++ b/App/Frontend/userNotes/components/NoteCard.html
@@ -28,24 +28,24 @@
 
                 <div class="row">
                     <div class="Title">
-                        <h1>Note Titleeeeeeeeeeeeeee</h1>
+                        <h1 id = "TitleText"> Note Titleeeeeeeeeeeeeee </h1>
                     </div>
                     <div class="Version">
-                        <h2>( v.1.0 )</h2>
+                        <h2 id="VersionText">( v.1.0 )</h2>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="Description">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem consequuntur beatae eius, nihil hello</p>
+                        <p id="DescriptionText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem consequuntur beatae eius, nihil hello</p>
                     </div>
                     <div class="Difficulty">
                         <div class="upper">Difficulty</div>
-                        <div class="lower">2 / 5</div>
+                        <div class="lower" id = "diffText">2 / 5</div>
                     </div>
                     <div class="Streak">
                         <div class="upper">Streak</div>
-                        <div class="lower">6</div>
+                        <div class="lower" id="streakText">6</div>
                     </div>
                 </div>
             </div> <!-- .StudyNotes -->
